objects/Experienced__c.object
<CustomObject>
    <description>It experienced object to store records of experienced people</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_resignation__c</fullName>
        <label>Date of resignation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Experienced_No_of_year__c</fullName>
        <label>Experienced No. of year</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Experienced</label>
    <nameField>
        <label>Experienced Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experienced</pluralLabel>
    <recordTypes>
        <fullName>Experienced</fullName>
        <active>true</active>
        <label>Experienced</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>